# rust-playground

./: .gitignore  Cargo.toml  README.md  _Cargo.toml  info.md
actix-catdex/: Cargo.toml
actix-catdex/src/: main.rs
actix-catdex/static/: index.html
actix-first-steps/: Cargo.toml
actix-first-steps/src/: main.rs
archived-learning/actix-catdex/: Cargo.toml
archived-learning/hands-on-data-structures-and-algorithms-in-rust/: notes.md
archived-learning/lott/: Cargo.toml  todo.md
archived-learning/lott-euro/: draw-history.csv
archived-learning/multithreaded-web-server-rust-book/: hello.html
branches-test/: Cargo.toml
branches-test/src/: main.rs
building-reusable-code-with-rust/: readme.md
building-reusable-code-with-rust/p01-working-with-iterators/: Cargo.toml
building-reusable-code-with-rust/p04-traits/: Cargo.toml
building-reusable-code-with-rust/p05-trait-objects/: Cargo.toml
building-reusable-code-with-rust/p07-static-vs-dynamic-dispatch/: Cargo.toml
building-reusable-code-with-rust/p08-traits-conversion/: Cargo.toml
building-reusable-code-with-rust/p09-markers/: Cargo.toml
building-reusable-code-with-rust/p10-format-traits/: Cargo.toml
building-reusable-code-with-rust/p12-crates-modules/example-binary/: Cargo.toml
candle/: Cargo.toml
candle/src/: main.rs
cli-todo-app/: Cargo.toml
cli-todo-app/src/: cli.rs  fs.rs  main.rs  tasks.rs  test-journal.json
consolo/: Cargo.toml  README.md
consolo/src/: card.rs  deck.rs  discard.rs  game.rs  gui.rs  main.rs  player.rs
function-test/: Cargo.toml
function-test/src/: main.rs
hands-on-data-structures-and-algorithms-in-rust/p01-results-options/: Cargo.toml
hands-on-data-structures-and-algorithms-in-rust/p02-iterator-stepper/: Cargo.toml
hands-on-data-structures-and-algorithms-in-rust/p05-str-vs-string/: Cargo.toml
hello-cargo/: Cargo.toml
loop-test/src/: main.rs
lott/: Cargo.toml  lotto-draw-history.csv
lott-euro/: Cargo.toml
lott-euro/src/: main.rs
lott/src/: main.rs
manning-async-stock-data-streaming/: Cargo.toml  sp500.dec.2022.txt  sp500.may.2020.txt
manning-async-stock-data-streaming/src/: main.rs
multithreaded-web-server-rust-book/: 404.html  Cargo.toml
overflow/: Cargo.toml
overflow/src/: main.rs
sass-compiler/: Cargo.toml  style.css  style.scss
(+268 files in other folders)
