# This .toml file is an example to demonstrate what we can customise here and how.

[package]
name = "project-name"
version = "0.1.0"
edition = "2021"

# optional other fields
authors = ["your name <you@example.com>"]
description = "What is this all about"

# license, multi-license or use license-file if identifier is not part of SPDX @ spdx.org/licenses
license = "MIT"
license = "MIT OR Apache-2.0"
license-file = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Customise builds with Release Profiles 
# The opt-level setting controls the number of optimisations Rust will apply to the code, with a range of 0 - 3.

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
