[package]
name = "cli-todo-app"
version = "0.1.0"
authors = ["a-bakos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
serde_json = "1.0.64"

[dependencies.serde] # add serde in its own section
version = "1.0"
features = ["derive"] # we'll need the derive feature

[dependencies.chrono]
version = "0.4.19"
features = ["serde"] # we need the serde feature for the chrono crate so we can serialize the DateTime field
