[package]
name = "example-binary"
version = "0.1.0"
authors = ["a-bakos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "https://github.com/rust-random/rand.git" } # we can specify dependencies from github too
